--- a/style.css
+++ b/style.css
@@ -24,68 +24,55 @@ body {
   font-family: var(--font-family);
 
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.main {
-}
-.main__title {
-}
-.main__paragraph {
-}
-.ranking {
-}
-.rate {
-}
-.rate__stars {
-}
-.rate__description {
-}
-
-.reviews {
-}
-.review {
-}
-.profile {
-}
-.profile__image {
-}
-.profile__info {
-}
-.profile__name {
-}
-.profile__verified {
-}
-.review__comment {
-}
-
 .attribution {
-  font-size: 11px;
+  margin: 2em 0;
+  font-size: 0.8em;
   text-align: center;
-}
-.attribution a {
-  color: inherit;
+  color: var(--primary-very-dark-magenta);
 }
 
-@media screen and (max-width: 375px) {
+.attribution a {
+  color: var(--primary-soft-pink);
+}
+
+@media screen and (max-width: 480px) {
+  body {
+    overflow-x: hidden;
+  }
+
   .main {
     width: 100%;
     margin: 1em;
     padding: 1em;
     background-color: var(--neutral-white);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   .main__title {
+    margin-bottom: 0.5em;
+    padding: 0 1em;
     color: var(--primary-very-dark-magenta);
     text-align: center;
     font-weight: 700;
   }
   .main__paragraph {
+    margin-bottom: 1em;
     color: var(--neutral-dark-grayish-magenta);
     text-align: center;
+    line-height: 1.3;
+    font-weight: 500;
   }
+
   .ranking {
     width: 100%;
+    margin: 1em 0;
     list-style: none;
   }
 
@@ -93,25 +80,33 @@ body {
     margin-bottom: 1em;
     padding: 1em;
     background-color: var(--neutral-light-grayish-magenta);
+    border-radius: 6px;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 0.5em;
+    gap: 0.8em;
   }
   .rate__stars {
+    width: 100px;
     height: 16px;
+
+    background-image: url(./images/icon-star.svg);
+    background-repeat: space;
+    object-fit: cover;
+    background-position: center;
   }
 
   .rate__description {
     color: var(--primary-very-dark-magenta);
     text-align: center;
-    font-weight: 500;
+    font-weight: 700;
   }
 
   .reviews {
     width: 100%;
+    margin: 1em 0;
     list-style: none;
   }
   .review {
@@ -119,28 +114,36 @@ body {
     padding: 2em;
     background-color: var(--primary-very-dark-magenta);
     color: var(--neutral-light-grayish-magenta);
+    border-radius: 6px;
   }
   .profile {
+    margin-bottom: 1.5em;
     display: flex;
     align-items: center;
     gap: 1em;
   }
+
   .profile__image {
     width: 2.5em;
 
     border-radius: 50%;
     overflow: hidden;
   }
+
   .profile__info {
     display: flex;
     flex-direction: column;
   }
   .profile__name {
     color: inherit;
+    font-weight: 500;
   }
   .profile__verified {
     color: var(--primary-soft-pink);
+    line-height: 1.5;
+    font-weight: 400;
   }
   .review__comment {
+    line-height: 1.3;
   }
 }
