--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@
   --neutral-dark-grayish-magenta: hsl(303, 10%, 53%);
   --neutral-light-grayish-magenta: hsl(300, 24%, 96%);
   --neutral-white: hsl(0, 0%, 100%);
-
-  --font-family: "League Spartan", sans-serif;
 }
 
 * {
@@ -20,13 +18,183 @@ html {
 }
 
 body {
+  margin: 0 3em;
   min-height: 100vh;
-  font-family: var(--font-family);
+  font-size: 15px;
+  font-family: "League Spartan", sans-serif;
 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.main {
+  width: 100%;
+  padding: 3em;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2em;
+}
+
+.section-one {
+  width: 100%;
+  margin: 1em 0;
+  padding: 0 3em;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.article {
+  max-width: 460px;
+  padding-right: 5em;
+}
+
+.article__title {
+  margin-bottom: 0.4em;
+  color: var(--primary-very-dark-magenta);
+
+  text-align: left;
+  font-size: 3em;
+  font-weight: 700;
+}
+
+.article__paragraph {
+  color: var(--neutral-dark-grayish-magenta);
+  font-weight: 500;
+  line-height: 1.5;
+}
+
+.ranking {
+  min-width: 450px;
+  list-style: none;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1em;
+}
+
+.rate {
+  width: 385px;
+  padding: 1em 2em;
+  border-radius: 6px;
+  background-color: var(--neutral-light-grayish-magenta);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2em;
+}
+
+.rate--left {
+  align-self: self-start;
+}
+
+.rate--center {
+  align-self: center;
+}
+
+.rate--right {
+  align-self: self-end;
+}
+
+.rate__stars {
+  width: 100px;
+  height: 16px;
+
+  background-image: url(./images/icon-star.svg);
+  background-repeat: space;
+  object-fit: cover;
+  background-position: center;
+}
+
+.rate__description {
+  text-align: center;
+  color: var(--primary-very-dark-magenta);
+  font-weight: 700;
+}
+
+/* ------------------------------------------------------------- */
+.section-two {
+  width: 100%;
+  margin: 1em 0;
+  padding: 0 3em;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.reviews {
+  width: 100%;
+  min-height: 250px;
+  list-style: none;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1em;
+}
+
+.review {
+  width: 400px;
+  padding: 3em;
+  border-radius: 6px;
+  background-color: var(--primary-very-dark-magenta);
+  color: var(--neutral-white);
+
+  display: grid;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.review--top {
+  justify-self: self-start;
+}
+
+.review--center {
+}
+
+.review--bottom {
+}
+
+.profile {
+  width: 100%;
+  margin-bottom: 1em;
+
+  display: flex;
+  align-items: center;
+  gap: 2em;
+}
+.profile__image {
+  width: 2.5em;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.profile__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.profile__name {
+  font-weight: 500;
+}
+.profile__verified {
+  color: var(--primary-soft-pink);
+  line-height: 1.5;
+  font-weight: 400;
+}
+
+.review__comment {
+  line-height: 1.3;
 }
 
 .attribution {
@@ -40,7 +208,7 @@ body {
   color: var(--primary-soft-pink);
 }
 
-@media screen and (max-width: 480px) {
+/* @media screen and (max-width: 480px) {
   body {
     overflow-x: hidden;
   }
@@ -146,4 +314,4 @@ body {
   .review__comment {
     line-height: 1.3;
   }
-}
+} */
