--- a/style.css
+++ b/style.css
@@ -18,10 +18,12 @@ html {
 }
 
 body {
-  margin: 0 3em;
+  width: 100vw;
   min-height: 100vh;
   font-size: 15px;
   font-family: "League Spartan", sans-serif;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   display: flex;
   flex-direction: column;
@@ -30,12 +32,13 @@ body {
 }
 
 .main {
-  width: 100%;
+  max-width: 80em;
+  margin: 2em;
   padding: 3em;
 
   display: flex;
   flex-direction: column;
-  align-items: center;
+  place-items: center;
   gap: 2em;
 }
 
@@ -122,46 +125,37 @@ body {
 /* ------------------------------------------------------------- */
 .section-two {
   width: 100%;
+  min-height: 250px;
   margin: 1em 0;
   padding: 0 3em;
 
   display: flex;
-  align-items: center;
   justify-content: center;
-}
-
-.reviews {
-  width: 100%;
-  min-height: 250px;
-  list-style: none;
-
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 1em;
+  gap: 2em;
 }
 
 .review {
   width: 400px;
-  padding: 3em;
+  padding: 2.5em 2em;
   border-radius: 6px;
   background-color: var(--primary-very-dark-magenta);
   color: var(--neutral-white);
 
-  display: grid;
+  display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  place-items: center;
 }
 
 .review--top {
-  justify-self: self-start;
+  align-self: start;
 }
 
 .review--center {
+  align-self: center;
 }
 
 .review--bottom {
+  align-self: end;
 }
 
 .profile {
@@ -172,6 +166,7 @@ body {
   align-items: center;
   gap: 2em;
 }
+
 .profile__image {
   width: 2.5em;
   border-radius: 50%;
@@ -194,6 +189,7 @@ body {
 }
 
 .review__comment {
+  width: 100%;
   line-height: 1.3;
 }
 
@@ -208,12 +204,12 @@ body {
   color: var(--primary-soft-pink);
 }
 
-/* @media screen and (max-width: 480px) {
+@media screen and (max-width: 480px) {
   body {
     overflow-x: hidden;
   }
 
-  .main {
+  /*  .main {
     width: 100%;
     margin: 1em;
     padding: 1em;
@@ -313,5 +309,5 @@ body {
   }
   .review__comment {
     line-height: 1.3;
-  }
-} */
+  }*/
+}
