--- a/style.css
+++ b/style.css
@@ -31,11 +31,30 @@ body {
   justify-content: center;
 }
 
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background: url(./images/bg-pattern-top-desktop.svg) no-repeat top left;
+}
+
+body::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  width: 100vw;
+  height: 100vh;
+  background: url(./images/bg-pattern-bottom-desktop.svg) no-repeat bottom right;
+}
+
 .main {
   position: relative;
   max-width: 80em;
   margin: 2em;
   padding: 3em;
+  z-index: 1;
 
   display: flex;
   flex-direction: column;
